# raven-assessment

./: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
datasheet_extract/: __init__.py  cli.py  config.py  emit.py  model.py
datasheet_extract/data/: units.py
datasheet_extract/eval/: match.py  metrics.py  report.py
datasheet_extract/ground/: normalize.py  provenance.py
datasheet_extract/ingest/: layout_doc.py  lines.py  sections.py  words.py
datasheet_extract/llm/: client.py  extract.py
golden/: pds-P300228.json  pds-P600173.json  pds-P718.json  pds-P818.json
tests/: test_eval.py  test_filter.py  test_ground.py  test_ingest.py  test_ocr.py
